--- a/app/src/main/res/layout/cancelar_mun.xml
+++ b/app/src/main/res/layout/cancelar_mun.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="106dp"
@@ -15,16 +14,14 @@
             android:layout_width="108dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:src="@drawable/user"
-            >
+            android:src="@drawable/user">
+
             <ImageView
                 android:id="@+id/user"
                 android:layout_width="85dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/user"
                 android:layout_marginLeft="10dp"
-                >
-            </ImageView>
+                android:src="@drawable/user"></ImageView>
         </LinearLayout>
 
         <LinearLayout
@@ -36,24 +33,22 @@
                 android:id="@+id/nombre"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:text="Kendrick Lamar"
-                android:textSize="24sp"
                 android:layout_marginTop="30dp"
-                />
+                android:text="Kendrick Lamar"
+                android:textSize="24sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/menu"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/menu"
-                android:layout_margin="10dp">
-            </ImageView>
+                android:layout_margin="10dp"
+                android:src="@drawable/menu"></ImageView>
         </LinearLayout>
 
         <LinearLayout
@@ -63,6 +58,23 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:background="#8a28d8"
+        android:backgroundTint="#8a28d8"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/AMartínHidalgo"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginTop="10dp"
+            android:text="A - San Martín Hidalgo"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="28sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,157 +83,103 @@
         android:visibility="visible">
 
         <TextView
-            android:id="@+id/Ahualulco"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="40dp"
+            android:text="14:00 horas"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
-            android:text="Ahualulco del Mercado"
-            android:textSize="20sp"
+            android:layout_marginRight="40dp"
+            android:text="Espacio: 40"
+            android:textAlignment="center"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-            android:src="@drawable/arrow"></ImageView>
 
         <TextView
-            android:id="@+id/Amatitán"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Amatitán"
-            android:textSize="20sp"
-            android:textStyle="bold"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/arrow"></ImageView>
-
-        <TextView
-            android:id="@+id/Ameca"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Ameca"
-            android:textSize="20sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40dp"
+            android:text="Disponible: 34"
+            android:textAlignment="center"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/arrow"></ImageView>
-
         <TextView
-            android:id="@+id/Cocula"
-            android:layout_width="wrap_content"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Cocula"
-            android:textSize="20sp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="5dp"
+            android:background="#fde767"
+
+            android:text="Cancelar"
+            android:textAlignment="center"
+            android:textColor="#8a28d8"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/arrow"></ImageView>
-
-        <TextView
-            android:id="@+id/Arenal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="El Arenal"
-            android:textSize="20sp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="40dp"
+            android:text="16:00 horas"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/arrow"></ImageView>
-
-        <TextView
-            android:id="@+id/Etzatlán"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Etzatlán"
-            android:textSize="20sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40dp"
+            android:text="Espacio: 40"
+            android:textAlignment="center"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:src="@drawable/arrow"></ImageView>
-
         <TextView
-            android:id="@+id/Magdalena"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Magdalena"
-            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40dp"
+            android:text="Disponible: 40"
+            android:textAlignment="center"
+            android:textColor="#0B0B0B"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:src="@drawable/arrow"></ImageView>
-
         <TextView
-            android:id="@+id/JuanitoEscobedo"
-            android:layout_width="wrap_content"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="San Juanito de Escobedo"
-            android:textSize="20sp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="5dp"
+            android:background="#fde767"
+            android:text="Cancelar"
+            android:textAlignment="center"
+            android:textColor="#8a28d8"
+            android:textSize="26sp"
             android:textStyle="bold"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-            android:src="@drawable/arrow"></ImageView>
-
-        <TextView
-            android:id="@+id/MartínHidalgo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="San Martín Hidalgo"
-            android:textSize="20sp"
-            android:textStyle="bold"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="140dp"
-            android:src="@drawable/arrow"></ImageView>
-
-        <TextView
-            android:id="@+id/Tala"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Tala"
-            android:textSize="20sp"
-            android:textStyle="bold"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/arrow">
-
-        </ImageView>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -233,7 +191,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="94dp"
         android:background="#fde767"
         android:backgroundTint="#fde767"
         android:orientation="horizontal">
@@ -242,7 +200,7 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="40dp"
             android:text="Derechos Reservados CUValles"
             android:textAlignment="center"
@@ -259,10 +217,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:background="#fde767"
         android:backgroundTint="#fde767"
-        >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="170dp"
@@ -296,16 +253,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/book"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/book"
-                android:layout_margin="10dp">
-            </ImageView>
+                android:layout_margin="10dp"
+                android:src="@drawable/book"></ImageView>
         </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
-
-
