--- a/app/src/main/res/layout/agendar.xml
+++ b/app/src/main/res/layout/agendar.xml
@@ -43,15 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/menu"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/menu"></ImageView>
-        </LinearLayout>
+            android:orientation="vertical"/>
 
         <LinearLayout
             android:layout_width="match_parent"
